package seedu.duke.data;

public enum BorrowStatus {
    PAST,
    PRESENT,
    FUTURE
}
